-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.7.0
-
None
-
3
-
16695
This issue was created by maloo for Li Wei <liwei@whamcloud.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/5278cc92-7b3d-11e4-8c6d-5254006e85c2.
The sub-test test_29c failed with the following error:
(8) unexpected status
More detailed test output:
== sanity-lfsck test 29c: Not verify nlink attr if hark links exceed linkEA limitation == 08:43:50 (1417625030)
#####
There are too much hard links to the object, and exceeds the
echo object's linkEA limitation, as to NOT all the known name entries
will be recorded in the linkEA. Under such case, LFSCK should
skip the nlink verification for this object.
#####
rm: cannot remove `/mnt/lustre/.lustre/lost+found/MDT0001/[0x340000bd1:0xb:0x0]-P-0': Directory not empty
Inject failure stub on MDT0 to simulate the case that
foo's hard links exceed the object's linkEA limitation.
CMD: onyx-32vm3 /usr/sbin/lctl set_param fail_loc=0x1627
fail_loc=0x1627
/mnt/lustre/d29c.sanity-lfsck/d0/foo
/mnt/lustre/d29c.sanity-lfsck/d0/h1
Trigger namespace LFSCK to repair the nlink count
CMD: onyx-32vm3 /usr/sbin/lctl lfsck_start -M lustre-MDT0000 -t namespace -r -A
Started LFSCK on the device lustre-MDT0000: scrub namespace
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
pdsh@onyx-32vm6: onyx-32vm3: mcmd: xpoll (setting up stderr): Interrupted system call
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
Waiting 32 secs for update
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
Waiting 22 secs for update
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
Waiting 12 secs for update
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
Waiting 2 secs for update
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/ { print \$2 }'
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
Update not seen after 32s: wanted 'completed' got ''
CMD: onyx-32vm3 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace
onyx-32vm3: error: get_param: mdd/lustre-MDT0000/lfsck_namespace: Found no match
sanity-lfsck test_29c: @@@@@@ FAIL: (8) unexpected status
Info required for matching: sanity-lfsck 29c
- is related to
-
LU-5518
LFSCK 3: recover client visible objects from the backend /lost+found directory
-
- Resolved
-