LU-5982 lfsck: not unlock the object repeatedly

There was wrong logic in lfsck_namespace_insert_orphan() that tried to
unlock the same object twice if failed to update the object's linkEA,
then triggered low layer LBUG(). Fix it.

On the other hand, the remote orphan parent object should be marked as
LOHA_EXISTS after lfsck_namespace_create_orphan_remote() done.

Some test scripts cleanup.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I3901d5cea8afde362dca8ee25a8d2a44e9f6ffea
Reviewed-on: http://review.whamcloud.com/12943
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>